argocdapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argoapp
    name: argoapp
    namespace: argoapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: argoapp
