argocdapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: argoapp
  name: argoapp
  namespace: argoapp
spec:
  host: argocdapp.apps.ocp4.example.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: argoapp
    weight: 100
